tests/snapshots/execution_spec__grpc-simple.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "news": {
        "news": [
          {
            "id": 1
          },
          {
            "id": 2
          }
        ]
      }
    }
  }
}