tests/snapshots/execution_spec__http2-without-certificate.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(version: "HTTP2") @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser: User @http(path: "/users/1")
}

type User {
  id: Int
  name: String
}
