tests/snapshots/execution_spec__http2-without-tls-batching-default.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(version: "HTTP2") @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 10, headers: [], maxSize: 100}, httpCache: true) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User @http(groupBy: ["id"], path: "/users", query: [{key: "foo", value: "bar"}, {key: "id", value: "{{value.userId}}"}])
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts?id=11&id=3&foo=1")
}

type User {
  id: Int
  name: String
}
