tests/snapshots/execution_spec__https.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Email

type Query {
  firstUser: User
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
